--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script src="3.3.js"></script>
     <script src="3.4.js"></script>
     <script src="4.1.js"></script>
+    <script src="4.2.js"></script>
+    <script src="4.3.js"></script>
 </body>
 </html>
 
