--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="4.1.js"></script>
     <script src="4.2.js"></script>
     <script src="4.3.js"></script>
+    <script src="4.4.js"></script>
 </body>
 </html>
 
