--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="4.2.js"></script>
     <script src="4.3.js"></script>
     <script src="4.4.js"></script>
+    <script src="4.5.js"></script>
 </body>
 </html>
 
